--- a/5posters/level2.html
+++ b/5posters/level2.html
@@ -8,8 +8,8 @@
 
     p{
       font-family: arial;
-      font-size: 200px;
-      margin-top: -40px;
+      font-size: 135px;
+      margin-top: -30px;
       margin-left: 410px;
     }
     p {
@@ -28,15 +28,59 @@ to {
   width: 100%;
 }
 }
+
+.light{
+  color: #2b80d8;
+}
+
+.blue{
+  color: #1d9ad8;
+}
+
+.orange{
+  color: #ffaa64;
+}
+
+.green{
+  color: #037e72;
+}
+
+.purple{
+  color: #886173;
+}
+
+.redd{
+  color: #f87379;
+}
+
+.purr{
+  color: #8168b1;
+}
+
+.aqua{
+  color: #8ec5c8;
+}
+
+.yellow{
+  color: #e7d005;
+}
+
+.grey{
+  color: #6d7a88;
+}
     </style>
   </head>
   <body>
 
-<p><strong>AE: Illust:
+<p><strong>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;<span class="light">T</span><span class="blue">H</span><span class="orange">E</span>
 <br>
-&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;AD:
+<span class="green">W</span>&nbsp;&nbsp;&nbsp;&nbsp;<span class="purple">A</span><span class="redd">N</span><span class="purr">S</span>
 <br>
-&nbsp;Des:
+<span class="purple">A</span><span class="purr">S</span>&nbsp;&nbsp;&nbsp;&nbsp;<span class="green">W</span><span class="aqua">E</span>
+<br>
+<span class="redd">N</span><span class="grey">'</span><span class="light">T</span>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;<span class="yellow">R</span>
+<br>
+<span class="blue">H</span><span class="orange">E</span><span class="yellow">R</span><span class="aqua">E</span>
 </strong>
 </p>
 
