--- a/5posters/level3.html
+++ b/5posters/level3.html
@@ -4,43 +4,23 @@
     <meta charset="utf-8">
     <title>Level 2</title>
 
-<script type="text/javascript">
 
-setTimeout(function () {
-  $('.letter g').addClass('addred');
-}, 1000);
-
-setTimeout(function () {
-  $('.letter g').removeClass('addred');
-  $('.letter g').addClass('moveleft');
-}, 3000);
-
-
-</script>
+<script src="jquery.js" charset="utf-8"></script>
+<script src="level3.js" charset="utf-8"></script>
 
 
     <style media="screen">
 
 
-    .letter g {
 
-    }
 
-    .addred {
-      color:red;
-    }
-
-    .moveleft {
-      margin-left:100px;
-    }
 
 .g{
   color: red;
   font-size: 300pt;
   font-family: arial;
   margin-top: -300px;
-  margin-left: 500px;
-  transition: all 0.5s;
+  margin-left: 550px;
 }
 
 .c{
@@ -48,35 +28,35 @@ setTimeout(function () {
   font-size: 300pt;
   font-family: arial;
   margin-top: -1000px;
-  margin-left: 650px;
+  margin-left: 700px;
 }
 
 .di{
   -webkit-transform: rotate(-90deg);
   font-family: arial;
-  margin-top: -770px;
-  margin-left: 100px;
+  margin-top: -730px;
+  margin-left: 170px;
   font-size: 22px;
 }
 
 .gra{
   font-family: arial;
-  margin-top: 275px;
-  margin-left: 780px;
+  margin-top: 230px;
+  margin-left: 820px;
   font-size: 22px;
 }
 
 .campo{
   font-family: arial;
-  margin-top: -250px;
-  margin-left: 380px;
+  margin-top: -230px;
+  margin-left: 420px;
   font-size: 40px;
 }
 
 .little{
   font-family: arial;
-  margin-top: 310px;
-  margin-left: 300px;
+  margin-top: 300px;
+  margin-left: 320px;
   font-size: 10px;
 }
     </style>
