--- a/5posters/level3.html
+++ b/5posters/level3.html
@@ -2,11 +2,10 @@
 <html>
   <head>
     <meta charset="utf-8">
-    <title>Level 2</title>
+    <title>Poster 4</title>
 
 
 <script src="jquery.js" charset="utf-8"></script>
-<script src="level3.js" charset="utf-8"></script>
 
 
     <style media="screen">
