--- a/5posters/level1.html
+++ b/5posters/level1.html
@@ -2,7 +2,7 @@
 <html>
   <head>
     <meta charset="utf-8">
-    <title>Level 1</title>
+    <title>Poster 1</title>
 
     <style media="screen">
       p{
