--- a/5posters/level3.2.html
+++ b/5posters/level3.2.html
@@ -2,7 +2,7 @@
 <html>
   <head>
     <meta charset="utf-8">
-    <title></title>
+    <title>Poster 3</title>
 
     <script src="jquery.js" charset="utf-8"></script>
 
