--- a/5posters/level1.html
+++ b/5posters/level1.html
@@ -18,12 +18,49 @@
         margin-top: -223px;
       }
 
+      .backbutton{
+        position: fixed;
+        text-decoration: none;
+        color: hotpink;
+        left: 2%;
+        margin-top: 280px;
+        font-family: arial;
+        font-weight: bold;
+        font-size: 30px;
+        transform: rotate(-90deg);
+        letter-spacing: 3px;
+      }
 
+      .nextbutton{
+        position: fixed;
+        text-decoration: none;
+        color: hotpink;
+        right: 4%;
+        margin-top: 280px;
+        font-family: arial;
+        font-weight: bold;
+        font-size: 30px;
+        transform: rotate(90deg);
+        letter-spacing: 3px;
+      }
+
+      .nextbutton:hover{
+        color: aqua;
+        text-decoration: overline;
+      }
+
+      .backbutton:hover{
+        color: aqua;
+        text-decoration: overline;
+      }
 
 
     </style>
   </head>
   <body>
+
+    <a href="index.html" class="backbutton">back</a>
+    <a href="level2.html" class="nextbutton">next</a>
 
 <p><strong>blackball,<br>
   black book, <br>
