--- a/5posters/level3.2.html
+++ b/5posters/level3.2.html
@@ -48,7 +48,7 @@ background-color: black;
 div{
 font-size: 300px;
 font-family: arial;
-color: red;
+color: hotpink;
 display: inline-block;
 margin-top: -50px;
 letter-spacing: -30px;
@@ -60,10 +60,49 @@ color: white;
 
 }
 
+.backbutton{
+  position: fixed;
+  text-decoration: none;
+  color: hotpink;
+  left: 2%;
+  margin-top: 280px;
+  font-family: arial;
+  font-weight: bold;
+  font-size: 30px;
+  transform: rotate(-90deg);
+  letter-spacing: 3px;
+}
+
+.nextbutton{
+  position: fixed;
+  text-decoration: none;
+  color: hotpink;
+  right: 4%;
+  margin-top: 280px;
+  font-family: arial;
+  font-weight: bold;
+  font-size: 30px;
+  transform: rotate(90deg);
+  letter-spacing: 3px;
+}
+
+.nextbutton:hover{
+
+  text-decoration: overline;
+}
+
+.backbutton:hover{
+
+  text-decoration: overline;
+}
+
     </style>
   </head>
 
   <body>
+
+    <a href="level2.html" class="backbutton">back</a>
+    <a href="level3.html" class="nextbutton">next</a>
 <center>
   <strong>
     <div class="d">D</div>
