--- a/5posters/level3.html
+++ b/5posters/level3.html
@@ -58,12 +58,49 @@
   margin-left: 320px;
   font-size: 10px;
 }
+
+.backbutton{
+  position: fixed;
+  text-decoration: none;
+  color: hotpink;
+  left: 2%;
+  margin-top: 280px;
+  font-family: arial;
+  font-weight: bold;
+  font-size: 30px;
+  transform: rotate(-90deg);
+  letter-spacing: 3px;
+}
+
+.nextbutton{
+  position: fixed;
+  text-decoration: none;
+  color: hotpink;
+  right: 4%;
+  margin-top: 280px;
+  font-family: arial;
+  font-weight: bold;
+  font-size: 30px;
+  transform: rotate(90deg);
+  letter-spacing: 3px;
+}
+
+.nextbutton:hover{
+  color: aqua;
+  text-decoration: overline;
+}
+
+.backbutton:hover{
+  color: aqua;
+  text-decoration: overline;
+}
     </style>
   </head>
   <body>
 
 
-
+    <a href="level3.2.html" class="backbutton">back</a>
+    <a href="level4.html" class="nextbutton">next</a>
 
 </div>
 
