--- a/5posters/trial.html
+++ b/5posters/trial.html
@@ -2,12 +2,12 @@
 <html>
   <head>
     <meta charset="utf-8">
-    <title>Level 2</title>
+    <title></title>
 
+    <script src="jquery-3.2.0.min.js" charset="utf-8"></script>
+    <script src="trial.js" charset="utf-8"></script>
 
-
-    <style media="screen">
-
+<style media="screen">
 body{
 
 
@@ -41,8 +41,7 @@ body{
   color: white;
   z-index: 10;
 }
-
-    </style>
+</style>
   </head>
   <body>
 
@@ -52,14 +51,14 @@ body{
 
 <div class="pittori">
   <p>Pittori<br>
-  <span class="white">"Corrente"</span><br>
-  Opere<br>
+  <span class="white">"Corrente"</span>
+  <div class="play_bell">Opere</div>
   <span class="white">1937 - 1946</span><br>
-  Galleria<br>
+  <div class="pause_bell">Galleria</div>
   dell' Accademia<br>
   <span class="white">Loggetta</span><br>
   <span class="white">Lambardesca</span><br>
-  Ravenna<br>
+  <div class="hover_horn">Ravenna</div>
   <span class="white">5 - 30 giugno 1971</span></p>
 </div>
 
