--- a/5posters/level3.html
+++ b/5posters/level3.html
@@ -2,16 +2,11 @@
 <html>
   <head>
     <meta charset="utf-8">
-    <title>Poster 4</title>
+    <title>Level 2</title>
 
-
-<script src="jquery.js" charset="utf-8"></script>
 
 
     <style media="screen">
-
-
-
 
 
 .g{
@@ -19,7 +14,7 @@
   font-size: 300pt;
   font-family: arial;
   margin-top: -300px;
-  margin-left: 550px;
+  margin-left: 500px;
 }
 
 .c{
@@ -27,118 +22,74 @@
   font-size: 300pt;
   font-family: arial;
   margin-top: -1000px;
-  margin-left: 700px;
+  margin-left: 650px;
 }
 
 .di{
   -webkit-transform: rotate(-90deg);
   font-family: arial;
-  margin-top: -730px;
-  margin-left: 170px;
+  margin-top: -770px;
+  margin-left: 100px;
   font-size: 22px;
 }
 
 .gra{
   font-family: arial;
-  margin-top: 230px;
-  margin-left: 820px;
+  margin-top: 275px;
+  margin-left: 780px;
   font-size: 22px;
 }
 
 .campo{
   font-family: arial;
-  margin-top: -230px;
-  margin-left: 420px;
+  margin-top: -250px;
+  margin-left: 380px;
   font-size: 40px;
 }
 
 .little{
   font-family: arial;
-  margin-top: 300px;
-  margin-left: 320px;
+  margin-top: 310px;
+  margin-left: 300px;
   font-size: 10px;
-}
-
-.backbutton{
-  position: fixed;
-  text-decoration: none;
-  color: hotpink;
-  left: 2%;
-  margin-top: 280px;
-  font-family: arial;
-  font-weight: bold;
-  font-size: 30px;
-  transform: rotate(-90deg);
-  letter-spacing: 3px;
-}
-
-.nextbutton{
-  position: fixed;
-  text-decoration: none;
-  color: hotpink;
-  right: 4%;
-  margin-top: 280px;
-  font-family: arial;
-  font-weight: bold;
-  font-size: 30px;
-  transform: rotate(90deg);
-  letter-spacing: 3px;
-}
-
-.nextbutton:hover{
-  color: aqua;
-  text-decoration: overline;
-}
-
-.backbutton:hover{
-  color: aqua;
-  text-decoration: overline;
 }
     </style>
   </head>
   <body>
 
 
-    <a href="level3.2.html" class="backbutton">back</a>
-    <a href="level4.html" class="nextbutton">next</a>
+<div class="letter g">
+  <p><strong>g</strong></p>
 
 </div>
-
-<div class="header">
-
-  <div class="letter g">
-    <p><strong>g</strong></p>
-
-  </div>
-
-  <div class="letter c">
-    <p><strong>c</strong></p>
-
-  </div>
-  <div class="di">
-    <p><strong>RAVISTA DI ESTEICA E DI TECNICA</strong></p>
-
-  </div>
-
-  </div>
-  <div class="gra">
-    <p><strong>GRAFICA</strong></p>
-
-  </div>
-
-  <div class="campo">
-    <p><strong>CAMPO GRAFICO</strong></p>
-
-  </div>
-
-  <div class="little">
-    <p><strong>I DONT KNOW WHAT THIS LITTLE TEXT SAYS SO I'M GOING TO MAKE IT UP</strong></p>
-
-  </div>
 
 </div>
 
 
+<div class="letter c">
+  <p><strong>c</strong></p>
+
+</div>
+<div class="di">
+  <p><strong>RAVISTA DI ESTEICA E DI TECNICA</strong></p>
+
+</div>
+
+</div>
+<div class="gra">
+  <p><strong>GRAFICA</strong></p>
+
+</div>
+
+<div class="campo">
+  <p><strong>CAMPO GRAFICO</strong></p>
+
+</div>
+
+<div class="little">
+  <p><strong>I DONT KNOW WHAT THIS LITTLE TEXT SAYS SO I'M GOING TO MAKE IT UP</strong></p>
+
+</div>
 
   </body>
 </html>
