--- a/project_2/index.html
+++ b/project_2/index.html
@@ -214,169 +214,169 @@
   </div>
 </div>
 
-<div class="item col3of4">
+<div class="item col3of4 outside old classy">
   <div class="spacer">
     <img src="assets/images/image27.jpg">
   </div>
 </div>
 
-<div class="item col2of4">
+<div class="item col2of4 old">
   <div class="spacer">
     <img src="assets/images/image28.jpg">
   </div>
 </div>
 
-<div class="item col2of4">
+<div class="item col2of4 old">
   <div class="spacer">
     <img src="assets/images/image29.jpg">
   </div>
 </div>
 
-<div class="item col1of4">
+<div class="item col1of4 classy">
   <div class="spacer">
     <img src="assets/images/image30.jpg">
   </div>
 </div>
 
-<div class="item col2of4">
+<div class="item col2of4 old classy">
   <div class="spacer">
     <img src="assets/images/image31.jpg">
   </div>
 </div>
 
-<div class="item col3of4">
+<div class="item col3of4 ikea modern">
   <div class="spacer">
     <img src="assets/images/image78.jpg">
   </div>
 </div>
 
-<div class="item col3of4">
+<div class="item col3of4 old">
   <div class="spacer">
     <img src="assets/images/image32.jpg">
   </div>
 </div>
 
-<div class="item col2of4">
+<div class="item col2of4 old">
   <div class="spacer">
     <img src="assets/images/image33.jpg">
   </div>
 </div>
 
-<div class="item col1of4">
+<div class="item col1of4 old outside">
   <div class="spacer">
     <img src="assets/images/image34.jpg">
   </div>
 </div>
 
-<div class="item col2of4">
+<div class="item col2of4 outside bright">
   <div class="spacer">
     <img src="assets/images/image35.jpg">
   </div>
 </div>
 
-<div class="item col2of4">
+<div class="item col2of4 outside">
   <div class="spacer">
     <img src="assets/images/image36.jpg">
   </div>
 </div>
 
-<div class="item col2of4">
+<div class="item col2of4 outside old">
   <div class="spacer">
     <img src="assets/images/image37.jpg">
   </div>
 </div>
 
-<div class="item col1of4">
+<div class="item col1of4 outside">
   <div class="spacer">
     <img src="assets/images/image38.jpg">
   </div>
 </div>
 
-<div class="item col2of4">
+<div class="item col2of4 outside old">
   <div class="spacer">
     <img src="assets/images/image39.jpg">
   </div>
 </div>
 
-<div class="item col2of4">
+<div class="item col2of4 outside old">
   <div class="spacer">
     <img src="assets/images/image40.jpg">
   </div>
 </div>
 
-<div class="item col3of4">
+<div class="item col3of4 people old">
   <div class="spacer">
     <img src="assets/images/image41.jpg">
   </div>
 </div>
 
-<div class="item col2of4">
+<div class="item col2of4 outside old bright">
   <div class="spacer">
     <img src="assets/images/image42.jpg">
   </div>
 </div>
 
-<div class="item col1of4">
+<div class="item col1of4 outside old">
   <div class="spacer">
     <img src="assets/images/image43.jpg">
   </div>
 </div>
 
-<div class="item col2of4">
+<div class="item col2of4 bright">
   <div class="spacer">
     <img src="assets/images/image44.jpg">
   </div>
 </div>
 
-<div class="item col2of4">
+<div class="item col2of4 bright outside">
   <div class="spacer">
     <img src="assets/images/image45.jpg">
   </div>
 </div>
 
-<div class="item col3of4">
+<div class="item col3of4 outside old">
   <div class="spacer">
     <img src="assets/images/image46.jpg">
   </div>
 </div>
 
-<div class="item col2of4">
+<div class="item col2of4 outside old">
   <div class="spacer">
     <img src="assets/images/image47.jpg">
   </div>
 </div>
 
-<div class="item col2of4">
+<div class="item col2of4 famous">
   <div class="spacer">
     <img src="assets/images/image75.jpg">
   </div>
 </div>
 
-<div class="item col3of4">
+<div class="item col3of4 people">
   <div class="spacer">
     <img src="assets/images/image48.jpg">
   </div>
 </div>
 
-<div class="item col3of4">
+<div class="item col3of4 ">
   <div class="spacer">
     <img src="assets/images/image49.jpg">
   </div>
 </div>
 
-<div class="item col2of4">
+<div class="item col2of4 animal">
   <div class="spacer">
     <img src="assets/images/image50.jpg">
   </div>
 </div>
 
-<div class="item col1of4">
+<div class="item col1of4 people outside bright">
   <div class="spacer">
     <img src="assets/images/image51.jpg">
   </div>
 </div>
 
-<div class="item col2of4">
+<div class="item col2of4 animal">
   <div class="spacer">
     <img src="assets/images/image52.jpg">
   </div>
