--- a/project_2/index.html
+++ b/project_2/index.html
@@ -69,7 +69,7 @@
 </div>
 </div>
 
-<div class="item col1of4 ikea modern">
+<div class="item col2of4 ikea modern">
   <div class="spacer">
     <img src="assets/images/image80.jpg">
   </div>
@@ -94,7 +94,7 @@
 </div>
 </div>
 
-<div class="item col1of4 classy bright">
+<div class="item col2of4 classy bright">
   <div class="spacer">
     <img src="assets/images/image8.jpg
 ">
@@ -358,7 +358,7 @@
   </div>
 </div>
 
-<div class="item col3of4 ">
+<div class="item col3of4 classy">
   <div class="spacer">
     <img src="assets/images/image49.jpg">
   </div>
@@ -382,164 +382,164 @@
   </div>
 </div>
 
-<div class="item col2of4">
+<div class="item col2of4 ikea">
   <div class="spacer">
     <img src="assets/images/image81.jpg">
   </div>
 </div>
 
-<div class="item col1of4">
+<div class="item col1of4 old classy">
   <div class="spacer">
     <img src="assets/images/image53.jpg">
   </div>
 </div>
 
-<div class="item col3of4">
+<div class="item col3of4 outside old">
   <div class="spacer">
     <img src="assets/images/image55.jpg">
   </div>
 </div>
 
-<div class="item col2of4">
+<div class="item col2of4 outside classy">
   <div class="spacer">
     <img src="assets/images/image56.jpg">
   </div>
 </div>
 
-<div class="item col2of4">
+<div class="item col2of4 people">
   <div class="spacer">
     <img src="assets/images/image57.jpg">
   </div>
 </div>
 
-<div class="item col2of4">
+<div class="item col2of4 old">
   <div class="spacer">
     <img src="assets/images/image58.jpg">
   </div>
 </div>
 
-<div class="item col2of4">
+<div class="item col2of4 bright">
   <div class="spacer">
     <img src="assets/images/image59.jpg">
   </div>
 </div>
 
-<div class="item col2of4">
+<div class="item col2of4 ikea">
   <div class="spacer">
     <img src="assets/images/image82.jpg">
   </div>
 </div>
 
-<div class="item col1of4">
+<div class="item col1of4 outside old">
   <div class="spacer">
     <img src="assets/images/image60.jpg">
   </div>
 </div>
 
-<div class="item col3of4">
+<div class="item col3of4 outside old">
   <div class="spacer">
     <img src="assets/images/image61.jpg">
   </div>
 </div>
 
-<div class="item col2of4">
+<div class="item col2of4 bright">
   <div class="spacer">
     <img src="assets/images/image62.jpg">
   </div>
 </div>
 
-<div class="item col1of4">
+<div class="item col1of4 outside old">
   <div class="spacer">
     <img src="assets/images/image63.jpg">
   </div>
 </div>
 
-<div class="item col2of4">
+<div class="item col2of4 old">
   <div class="spacer">
     <img src="assets/images/image64.jpg">
   </div>
 </div>
 
-<div class="item col2of4">
+<div class="item col2of4 old outside">
   <div class="spacer">
     <img src="assets/images/image65.jpg">
   </div>
 </div>
 
-<div class="item col3of4">
+<div class="item col3of4 old">
   <div class="spacer">
     <img src="assets/images/image66.jpg">
   </div>
 </div>
 
-<div class="item col2of4">
+<div class="item col2of4 old">
   <div class="spacer">
     <img src="assets/images/image67.jpg">
   </div>
 </div>
 
-<div class="item col1of4">
+<div class="item col1of4 old outside">
   <div class="spacer">
     <img src="assets/images/image68.jpg">
   </div>
 </div>
 
-<div class="item col2of4">
+<div class="item col2of4 old">
   <div class="spacer">
     <img src="assets/images/image69.jpg">
   </div>
 </div>
 
-<div class="item col2of4">
+<div class="item col2of4 famous">
   <div class="spacer">
     <img src="assets/images/image70.jpg">
   </div>
 </div>
 
-<div class="item col3of4">
+<div class="item col3of4 famous">
   <div class="spacer">
     <img src="assets/images/image71.jpg">
   </div>
 </div>
 
-<div class="item col2of4">
+<div class="item col2of4 famous">
   <div class="spacer">
     <img src="assets/images/image71.png">
   </div>
 </div>
 
-<div class="item col1of4">
+<div class="item col1of4 famous">
   <div class="spacer">
     <img src="assets/images/image73.jpg">
   </div>
 </div>
 
-<div class="item col2of4">
+<div class="item col2of4 famous">
   <div class="spacer">
     <img src="assets/images/image74.jpg">
   </div>
 </div>
 
 
-<div class="item col1of4">
+<div class="item col1of4 famous">
   <div class="spacer">
     <img src="assets/images/image76.jpg">
   </div>
 </div>
 
-<div class="item col2of4">
+<div class="item col2of4 ikea">
   <div class="spacer">
     <img src="assets/images/image77.jpg">
   </div>
 </div>
 
-<div class="item col2of4">
+<div class="item col2of4 ikea">
   <div class="spacer">
     <img src="assets/images/image79.jpg">
   </div>
 </div>
 
-<div class="item col1of4">
+<div class="item col1of4 ikea">
   <div class="spacer">
     <img src="assets/images/image83.jpg">
   </div>
