--- a/5posters/level3.2.html
+++ b/5posters/level3.2.html
@@ -4,7 +4,7 @@
     <meta charset="utf-8">
     <title>Poster 3</title>
 
-    <script src="jquery.js" charset="utf-8"></script>
+    <script src="jquery-3.2.0.min.js" charset="utf-8"></script>
 
 <script type="text/javascript">
 
