--- a/project_3/index.html
+++ b/project_3/index.html
@@ -22,10 +22,16 @@
   <body>
 
     <!-- Start here -->
-<h1>SPRING</h1>
+
+    <h1 class="spring_title">Spring</h1>
+    <h1 class="summer_title">Summer</h1>
+    <h1 class="autumn_title">Autumn</h1>
+    <h1 class="winter_title">Winter</h1>
+
+
     <div class="time"></div>
 
-<div class="image_swap">
+<!-- <div class="image_swap">
 
   <img class="spring1" src="assets/images/spring1.png" alt="">
   <img class="spring2" src="assets/images/spring2.jpg" alt="">
@@ -43,6 +49,65 @@
   <img class="winter2" src="assets/images/winter2.jpg" alt="">
   <img class="winter3" src="assets/images/winter3.jpg" alt="">
   <img class="winter4" src="assets/images/winter4.jpg" alt="">
+
+</div> -->
+
+<div class="spring season">
+<img class="image5" src="assets/images/spring1.png" alt="">
+<img class="image10" src="assets/images/spring2.jpg" alt="">
+<img class="image15" src="assets/images/spring3.jpg" alt="">
+<img class="image20" src="assets/images/spring4.jpg" alt="">
+<img class="image25" src="assets/images/spring1.png" alt="">
+<img class="image30" src="assets/images/spring2.jpg" alt="">
+<img class="image35" src="assets/images/spring3.jpg" alt="">
+<img class="image40" src="assets/images/spring4.jpg" alt="">
+<img class="image45" src="assets/images/spring1.png" alt="">
+<img class="image50" src="assets/images/spring2.jpg" alt="">
+<img class="image55" src="assets/images/spring3.jpg" alt="">
+</div>
+
+<div class="summer season">
+<img class="image5" src="assets/images/summer1.jpg" alt="">
+<img class="image10" src="assets/images/summer2.jpg" alt="">
+<img class="image15" src="assets/images/summer3.jpg" alt="">
+<img class="image20" src="assets/images/summer4.jpg" alt="">
+<img class="image25" src="assets/images/summer1.jpg" alt="">
+<img class="image30" src="assets/images/summer2.jpg" alt="">
+<img class="image35" src="assets/images/summer3.jpg" alt="">
+<img class="image40" src="assets/images/summer4.jpg" alt="">
+<img class="image45" src="assets/images/summer1.jpg" alt="">
+<img class="image50" src="assets/images/summer2.jpg" alt="">
+<img class="image55" src="assets/images/summer3.jpg" alt="">
+</div>
+
+<div class="autumn season">
+<img class="image5" src="assets/images/autumn1.jpg" alt="">
+<img class="image10" src="assets/images/autumn2.jpg" alt="">
+<img class="image15" src="assets/images/autumn3.jpg" alt="">
+<img class="image20" src="assets/images/autumn4.jpg" alt="">
+<img class="image25" src="assets/images/autumn1.jpg" alt="">
+<img class="image30" src="assets/images/autumn2.jpg" alt="">
+<img class="image35" src="assets/images/autumn3.jpg" alt="">
+<img class="image40" src="assets/images/autumn4.jpg" alt="">
+<img class="image45" src="assets/images/autumn1.jpg" alt="">
+<img class="image50" src="assets/images/autumn2.jpg" alt="">
+<img class="image55" src="assets/images/autumn3.jpg" alt="">
+</div>
+
+<div class="winter season">
+<img class="image5" src="assets/images/winter1.jpg" alt="">
+<img class="image10" src="assets/images/winter2.jpg" alt="">
+<img class="image15" src="assets/images/winter3.jpg" alt="">
+<img class="image20" src="assets/images/winter4.jpg" alt="">
+<img class="image25" src="assets/images/winter1.jpg" alt="">
+<img class="image30" src="assets/images/winter2.jpg" alt="">
+<img class="image35" src="assets/images/winter3.jpg" alt="">
+<img class="image40" src="assets/images/winter4.jpg" alt="">
+<img class="image45" src="assets/images/winter1.jpg" alt="">
+<img class="image50" src="assets/images/winter2.jpg" alt="">
+<img class="image55" src="assets/images/winter3.jpg" alt="">
+</div>
+
 
 
 <!--<div class="message">
